objects/cscfga__Product_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Snapshot_Object__c</fullName>
        <description>Object API name to which instantiated PC&apos;s attributes will be output mapped</description>
        <label>Snapshot Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Attach_Pdf_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks if the UPC customer facing PDF documents should be attached for the same.</description>
        <label>Attach pdf documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Product_Abbreviation__c</fullName>
        <description>Holds the abbreviation for a product - used in various apex classes.</description>
        <label>Product Abbreviation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csbb__Product_Grouping__c</fullName>
        <label>Product Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, it indicates that this Product Definition is active and available to sales users for configuration (several other conditions must be met).</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Allow_progress_from_incomplete_screens__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Allow the user to proceed to the next screens without completing all the required fields. A warning message will be displayed upon saving.</inlineHelpText>
        <label>Allow progress from incomplete screens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Date_Range__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Date range used to make the products available only for the fixed time period specified.</inlineHelpText>
        <label>Dates Available</label>
        <referenceTo>cscfga__Date_Range__c</referenceTo>
        <relationshipLabel>Product Definitions</relationshipLabel>
        <relationshipName>Product_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Default_Billing_Frequency__c</fullName>
        <inlineHelpText>Defines how often recurring product will be charged. Translates to Billing Frequency during product configuration.</inlineHelpText>
        <label>Default Line Item Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Bi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Fortnightly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Default_Contract_Term_Period__c</fullName>
        <inlineHelpText>Default value that represents the measure of time and is used along with Contract Term to define the contract-binding period. Expressed as the number of times the period occurs in a year, for example: Annually (1), Quarterly (4), Monthly (12) and so on.</inlineHelpText>
        <label>Default Contract Term Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Default_Contract_Term__c</fullName>
        <inlineHelpText>Default Contract Term for this Product Definition. It is a number which combined with Contract Term Period value defines the contract-binding period.</inlineHelpText>
        <label>Default Contract Term</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Default_Frequency__c</fullName>
        <inlineHelpText>Defines how often recurring product should be billed. Translates to Recurrence Frequency during product configuration.</inlineHelpText>
        <label>Default Line Item Recurrence Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Bi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Fortnightly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Description__c</fullName>
        <inlineHelpText>Description of the product visible to the sales user in the configuration process.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Eligibility_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to restrict sale of this product based on the eligibility rule criteria (e.g. only customers which meet the criteria will have access to this product).</inlineHelpText>
        <label>Eligibility Rule</label>
        <referenceTo>cscfga__Eligibility_Rule__c</referenceTo>
        <relationshipLabel>Product Definitions</relationshipLabel>
        <relationshipName>Product_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Import_Information__c</fullName>
        <description>Contains brief summary information if definition has been imported from an XML file</description>
        <inlineHelpText>Contains details entered during Import of this Product Category / Definition.</inlineHelpText>
        <label>Import Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Product Definition is archived and not available to sales users for configuration.</inlineHelpText>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Is_Shared_Context_Definition__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this Product Definition can be used as Shared Context to other products.</inlineHelpText>
        <label>Is Shared Context Definition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Label__c</fullName>
        <inlineHelpText>Text label displayed instead of Product Definition name during configuration.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Name_Is_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the resulting configuration name is auto-generated and cannot be overriden by the user.</description>
        <inlineHelpText>If checked, the resulting configuration name is auto-generated and cannot be overridden by the user.</inlineHelpText>
        <label>Config name is read-only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Opportunity_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for mapping Opportunity object fields which can be used for product configuration.</inlineHelpText>
        <label>Opportunity Mapping</label>
        <referenceTo>cscfga__Object_Mapping__c</referenceTo>
        <relationshipLabel>Product Definitions</relationshipLabel>
        <relationshipName>Product_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product Category that this Product Definition belongs to.</inlineHelpText>
        <label>Product Category</label>
        <referenceTo>cscfga__Product_Category__c</referenceTo>
        <relationshipLabel>Product Definitions</relationshipLabel>
        <relationshipName>Product_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Reprocess_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, all Rules will be reprocessed on the final step of Product Bundle configuration.</inlineHelpText>
        <label>Reprocess Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Restrict_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, only Users with specific profiles will have access to this Product Definition. Use Access Permissions button on the Product Definition detail page to define the access rules.</inlineHelpText>
        <label>Restrict Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Sequence__c</fullName>
        <inlineHelpText>The weight to be assigned to this Product Definition when sorting products for display to the sales user during configuration.</inlineHelpText>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Shared_Context_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to associate another Product Definition, which is declared as Shared Context, to this Product.</inlineHelpText>
        <label>Shared Context Definition</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected Definition must be a Shared Context Definition</errorMessage>
            <filterItems>
                <field>cscfga__Product_Definition__c.cscfga__Is_Shared_Context_Definition__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cscfga__Product_Definition__c</referenceTo>
        <relationshipLabel>Product Definitions</relationshipLabel>
        <relationshipName>Product_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__XML__c</fullName>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__configuration_customiser_class__c</fullName>
        <description>Name of a class implementing Configuration customisation.</description>
        <inlineHelpText>Name of a class implementing Configuration customisation.</inlineHelpText>
        <label>Configuration Customiser Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__image_url__c</fullName>
        <inlineHelpText>Image displayed next to Product Definition name when selecting the products during configuration.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cscfga__iteration__c</fullName>
        <description>Number of changes to Product Definition in structure:behaviour:layout.</description>
        <label>Iteration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__reference__c</fullName>
        <description>Hierarchical reference used to build child object references in Runtime V2</description>
        <inlineHelpText>Hierarchical reference used to build child object references in Runtime V2</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__runtime_version__c</fullName>
        <description>Select runtime engine that will be used with product definition.
v1 - Visualforce/apex runtime
v2 - JS runtime</description>
        <inlineHelpText>Select runtime engine that will be used with product definition.
v1 - Visualforce/apex runtime
v2 - JS runtime</inlineHelpText>
        <label>Runtime Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v1</fullName>
                    <default>true</default>
                    <label>v1</label>
                </value>
                <value>
                    <fullName>v2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csexpimp1__guid__c</fullName>
        <description>GUID for JSON export/import</description>
        <externalId>true</externalId>
        <inlineHelpText>GUID for JSON export/import</inlineHelpText>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Do_Not_Produce_Service_Line_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Produce Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Is_Contextualized__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes if a Service spawned from a Product Configuration with this Product Definition can be modified independently</description>
        <inlineHelpText>Denotes if a Service spawned from a Product Configuration with this Product Definition can be modified independently</inlineHelpText>
        <label>Is Contextualized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                    <default>true</default>
                    <label>Subscription</label>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Nothing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Screen_Flow_For_Service_Changes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Screen Flow For Service Changes</label>
        <referenceTo>cscfga__Screen_Flow__c</referenceTo>
        <relationshipLabel>Product Definitions</relationshipLabel>
        <relationshipName>Product_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Association__c</fullName>
        <label>Subscription Association</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription1</fullName>
                </value>
                <value>
                    <fullName>Subscription2</fullName>
                </value>
                <value>
                    <fullName>Subscription3</fullName>
                </value>
                <value>
                    <fullName>Subscription4</fullName>
                </value>
                <value>
                    <fullName>Subscription5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__order_product_per_unit_of_a_quantity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Generate Order Product Records per Unit of Quantity</description>
        <label>Order Product per Unit of Quantity</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Definition</label>
    <listViews>
        <fullName>Active_Product_Definitions</fullName>
        <columns>NAME</columns>
        <columns>cscfga__Active__c</columns>
        <columns>cscfga__Product_Category__c</columns>
        <columns>cscfga__Import_Information__c</columns>
        <columns>cscfga__IsArchived__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cscfga__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Product Definitions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>cscfga__All</fullName>
        <columns>NAME</columns>
        <columns>cscfga__Active__c</columns>
        <columns>cscfga__Product_Category__c</columns>
        <columns>cscfga__Import_Information__c</columns>
        <columns>cscfga__IsArchived__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>cscfga__Opportunity_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Definitions</pluralLabel>
    <recordTypes>
        <fullName>cscfga__basket_rules_container</fullName>
        <active>false</active>
        <description>Container for global basket-level rules</description>
        <label>Basket Rules Container</label>
    </recordTypes>
    <recordTypes>
        <fullName>cscfga__package_definition</fullName>
        <active>true</active>
        <description>Describes a package structure</description>
        <label>Package Definition</label>
    </recordTypes>
    <recordTypes>
        <fullName>cscfga__product_definition</fullName>
        <active>true</active>
        <description>Standard product definition</description>
        <label>Product Definition</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cscfga__Shared_Context_Cannot_Require_Another</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
cscfga__Is_Shared_Context_Definition__c,
NOT(ISBLANK( cscfga__Shared_Context_Definition__c ))
)</errorConditionFormula>
        <errorMessage>A Shared Context Definition cannot require another Shared Context Definition</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cscfga__Shared_Context_Def_Must_Be_Correct_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK( cscfga__Shared_Context_Definition__c )),
NOT(cscfga__Shared_Context_Definition__r.cscfga__Is_Shared_Context_Definition__c)
)</errorConditionFormula>
        <errorMessage>A Product Definition used as a shared context definiiton must have the &apos;Is Shared Context Definition&apos; checkbox ticked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>csexpimp1__Guid_Format_Check</fullName>
        <active>true</active>
        <description>Validates the format of GUID, but allows for it to remain blank.</description>
        <errorConditionFormula>AND(NOT( REGEX( csexpimp1__guid__c , &quot;\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12}&quot;) )
, NOT(ISBLANK(csexpimp1__guid__c )))</errorConditionFormula>
        <errorDisplayField>csexpimp1__guid__c</errorDisplayField>
        <errorMessage>Required format of the GUID is xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
With x being any alphanumeric character (letter or digit).</errorMessage>
    </validationRules>
</CustomObject>